--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
-#about {
+#home {
 	background-image: url("../images/bamboo-small.jpg");
+	color: white;	
+}
+
+#about {
+	background-image: url("../images/coffee-small.jpg");
 	color: white;
 }
 
@@ -9,15 +14,16 @@
 }
 
 #contact {
-	background-image: url("");
+	background-image: url("../images/flatiron-small.jpg");
 	color: white;
 }
 
+
 .background-pic {
+	padding-top: 10em;
 	background-size: cover;
 	background-attachment: fixed;
 	width: 100%;
-	padding: 15em 30em 30em;
 	text-align: center;
 }
 
@@ -25,9 +31,10 @@
 	margin: 0;
 }
 
-#about li {
+li {
 	display: inline;
 	list-style: none;
+	margin: 0 0.5em 0 0.5em;
 }
 
 .fa {
